prevent graphs from being cutoff in printout

--- a/src/app/compressed-air-assessment/system-profile-graphs/system-profile-graphs.component.css
+++ b/src/app/compressed-air-assessment/system-profile-graphs/system-profile-graphs.component.css
@@ -3,6 +3,9 @@
     text-transform: none;
 }
 
+.ca-system-profiles-graph-print {
+    width: 1000px !important;
+}
 
 
 @media print {
